--- a/djangoproject/gestion_stock/templates/unitemanutentionentreemodify.html
+++ b/djangoproject/gestion_stock/templates/unitemanutentionentreemodify.html
@@ -74,7 +74,7 @@
 
                 <div class="col-auto">
                     <br>
-                    <label for="divbtns">filtrer liriges :&nbsp;</label>
+                    <label for="divbtns">filtrer litiges :&nbsp;</label>
                     <div class="btn-group" role="group" aria-label="Basic example" id="divbtns">
                         <button type="button" class="btn btn-sm btn-cyan">tout</button>
                         <button type="button" class="btn btn-sm btn-cyan">livrable</button>
@@ -133,7 +133,7 @@
             <div class="row">
                 <div class="col">
                     <br>
-                    <label for="divbtns">filtrer liriges :&nbsp;</label>
+                    <label for="divbtns">filtrer emplacement confirmé :&nbsp;</label>
                     <div class="btn-group" role="group" aria-label="Basic example" id="divbtns">
                         <button type="button" class="btn btn-sm btn-cyan">tout</button>
                         <button type="button" class="btn btn-sm btn-cyan">stock</button>
@@ -255,12 +255,15 @@
                     nbrligne = $('#numberligne').val();
                     $('#numberligne').val("");
                     $(this).dialog("close");
+                    var colid = "0";
                     for (var nbr = nbrligne; nbr > 0; nbr--) {
                         $('#tabblbody').append("<tr><td><button class='duplique btn btn-sm  btn-outline-grey rounded-pill w-25' id=\"duplicate" + nbr + "\"><i class=\"fas fa-copy\"></i></button></td>" +
                             "<td><button class='ajout btn btn-sm rounded-pill btn-outline-grey w-25' id=\"add" + nbr + "\"><i class=\"fas fa-plus\"></i></button></td>" +
-                            "<td><input class='form-control' disabled></td>" +
+                            "<td><input class='form-control' disabled id=\"ncolis" + nbr + "\"></td>" +
+
                             "<td><select class=\"form-control fournise\" id=\"blfournisseur" + nbr + "\"></select></td>" +
                             "<td><select class=\"form-control desif\" id=\"iddesif" + nbr + "\"></select></td>" +
+
                             "<td><input class='form-control'></td>" +
                             "<td><input type=\"date\" class=\"date rounded\" class=\"form-control\"></td>" +
                             "<td><input type=\"text\" class=\"form-control\"></td>" +
@@ -275,7 +278,7 @@
                             "<td><button class='btn btn-sm rounded-pill'><i class=\"fas fa-unlink\" style='color: red;'></i></button></td>" +
                             "<td><input class='form-control'></td>" +
                             "<td><button class=\"deleteur btn btn-sm rounded-pill\"> <i class=\"fas fa-trash\" style='color: red;'></i> </button> </td>" +
-                            "<td class='text-center'><i class=\"fas fa-layer-group mt-2\" style='font-size: 25px;cursor:pointer;'></i></td>" +
+                            "<td class='text-center'><i class=\"fas fa-layer-group mt-2\" style='font-size: 25px;cursor:pointer;color: black;'></i></td>" +
                             "<td><button class=\"print btn btn-sm rounded-pill\"> <i class=\"fas fa-print\" style='color: lightblue;font-size: 15px;'></i></button></td>+");
                         //$('body').append("<div id=\"modal" + nbr + "\" title=\"Basic dialog\">" +
                         //"<p>This is the default dialog which is useful for displaying information. The dialog window can be moved, resized and closed with the 'x' icon.</p></div>");
@@ -287,27 +290,60 @@
                                 },
                             }
                         });*/
-                        '{% for items in art %}'
-                        $("select.fournise:last").append(new Option("{{ items.codeFournisseur }}", "{{ items.codeFournisseur }}"));
-                        $("select.desif:last").append(new Option("{{ items.designationClient }}", "{{ items.designationClient }}"));
-                        $("select.fournise:last").val("");
-                        $("select.desif:last").val("");
+                        '{% for items in article %}'
+                        $("#blfournisseur" + nbr).append(new Option("{{ items.codeFournisseur }}", "{{ items.codeFournisseur }}"));
+                        $("#iddesif" + nbr).append(new Option("{{ items.designationClient }}", "{{ items.designationClient }}"));
+                        $("#blfournisseur" + nbr).val("");
+                        $("#iddesif" + nbr).val("");
                         '{% endfor %}'
+                        litige[nbr] += "";
+                        decilitige[nbr] += "";
+
                         $('<div id="newDialogText'+nbr+'" class="'+ nbr +'">Litige<br><select class="myselect" id="litigebox'+nbr+'">' +
                             '</select><br>décision sur litige<select class="myselect2" id="decilitigebox'+nbr+'"></select></div>').dialog({
                             autoOpen: false, modal: true, show: "blind", hide: "blind", buttons: {
                                 "Annuler": function () {
                                     $('#numberligne').val("");
+                                    console.log($(this).attr('id').replace(/\D/g, '')); //je recupère l'id de la "ligne" pour savoir laquelle est-ce pour vider mes array a cet index
+                                    litige[$(this).attr('id').replace(/\D/g, '')] = "";
+                                    decilitige[$(this).attr('id').replace(/\D/g, '')] = "";
+                                    $(this).dialog("close");
+                                },
+                                ok: function() {
                                     $(this).dialog("close");
                                 },
                             }
                         });
                         '{% for items in litige %}'
-                            $('#litigebox'+nbr).append(new Option("{{ items.nom }}", "{{ items.nom }}"));
+                        $('#litigebox'+nbr).append(new Option("{{ items.nom }}", "{{ items.nom }}"));
                         '{% endfor %}'
                         '{% for items in decilitige %}'
-                            $('#decilitigebox'+nbr).append(new Option("{{ items.nom }}", "{{ items.nom }}"));
+                        $('#decilitigebox'+nbr).append(new Option("{{ items.nom }}", "{{ items.nom }}"));
                         '{% endfor %}'
+                        $('#litigebox'+nbr).val("");
+                        $('#decilitigebox'+nbr).val("");
+
+                        $("#litigebox" + nbr).combobox({
+                            select: function (event, ui) {
+                                //console.log("test");
+                                litige[nbr] = $(this).val();
+                                //console.log("gg val " + $(this).val());
+                            }
+                        });
+                        $("#decilitigebox"+nbr).combobox({
+                            select: function (event, ui) {
+                                decilitige[nbr] = $(this).val();
+                                //console.log("gg val " + $(this).val());
+                            }
+                        });
+
+                        "{% for items in colis %}"
+                        if (parseInt(colid, 10) < parseInt('{{ items.idColis }}', 10)) {
+                            colid = parseInt('{{ items.idColis }}', 10);
+                        }
+                        "{% endfor %}"
+                        colid++;
+                        $("#ncolis" + nbr).val(colid);
                     }
                     $('.addmodal').click(function() {
                         $('#newDialogText' + $(this).attr('id')).dialog("open");
@@ -351,7 +387,7 @@
                     });
                     $(".fournise").combobox({
                         select: function (event, ui) {
-                            '{% for items in art %}'
+                            '{% for items in article %}'
                             if ('{{ items.codeFournisseur }}' == this.value) {
                                 console.log("therae");
                                 //$(this).closest('td').next().find('select').val('{{ items.designationClient }}');
@@ -364,7 +400,7 @@
                     });
                     $(".desif").combobox({
                         select: function (event, ui) {
-                            '{% for items in art %}'
+                            '{% for items in article %}'
                             if ('{{ items.designationClient  }}' == this.value) {
                                 console.log("therae");
                                 //$(this).closest('td').next().find('select').val('{{ items.designationClient }}');
@@ -380,17 +416,25 @@
                         //var id = $(this).attr('id');
                         $(this).closest('td').parent().find('td').eq(0).next().find('select').find('option').remove();
                         $(this).closest('td').parent().find('td').eq(1).next().find('select').find('option').remove();
-                        '{% for items in art %}'
+                        '{% for items in article %}'
                         $(this).closest('td').parent().find('td').eq(0).next().find('select').append(new Option("{{ items.codeFournisseur }}", "{{ items.codeFournisseur }}"));
                         $(this).closest('td').parent().find('td').eq(1).next().find('select').append(new Option("{{ items.designationClient }}", "{{ items.designationClient }}"));
                         '{% endfor %}'
                     });
+
                     $('#addligne').prop("disabled", true);
                     $(".ui-dialog-titlebar").hide();
                 }
             },
         });
-
+        $('body').on('click', '.fa-toggle-off', function() {
+            $(this).removeClass('fa-toggle-off');
+            $(this).addClass('fa-toggle-on');
+        });
+        $('body').on('click', '.fa-toggle-on', function() {
+            $(this).removeClass('fa-toggle-on');
+            $(this).addClass('fa-toggle-off');
+        });
         $("#dialog-confirm").dialog("close");
         $('body').on('click', '.butctrl', function() {
             if ($(this).hasClass("btn-light")) {
@@ -404,6 +448,16 @@
                 $(this).addClass("btn-light");
                 $(this).find($("i")).removeClass('fa-thumbs-up').addClass('fa-thumbs-down');
             }
+        });
+        $('body').on('click', '.fa-layer-group', function() {
+            if ($(this).css('color') == "rgb(0, 0, 0)") {
+                console.log("color change colle");
+                $(this).css('color', 'green');
+            }
+            else {
+                $(this).css('color', 'black');
+            }
+
         });
         $(document).on("input", "input", function (event) {
             if (this.checkValidity()) {
@@ -438,18 +492,164 @@
             $("#dialog-confirm").dialog("open");
         });
 
-        var upperid = "0";
-        "{% for items in entree %}"
-        if (parseInt(upperid, 10) < parseInt('{{ items.idBonLivraisonEntree }}', 10)) {
-            upperid = parseInt('{{ items.idBonLivraisonEntree }}', 10);
-        }
-        "{% endfor %}"
-
         $("#umid").val('{{ id }}');
 
         $('#tabblbody').on('click', '.deleteur', function() {
             $(this).parent().parent().remove();
         });
+
+        var idx = 0;
+        $('#saveume').click(function() { //envoie des données
+            var ncolis = "";
+            var codefournisseur = "";
+            var designation = "";
+            var nlot = "";
+            var datep = "";
+            var qtecolis = "";
+            var litige = "";
+            var decisionlitige = "";
+            var numerote = "";
+            var confirme = "";
+            var retourncolis = "";
+            var colle = "";
+            var ligne = {};
+            var ligneidx = 0;
+            $('#tabblbody tr').each(function (a, b) {  //recupère les  entrée dans la table
+                if (a === 0) {
+                    // Je ne prends pas en compte le "thead".
+                }
+                else {
+                    ligneidx++;
+                    var stock = "";
+                    $(this).find('td').each(function(a, b) {
+                        if (a === 0) {
+                        } else {
+                            stock = $(this).find('input').val();
+                            if (a === 2) {
+                                ncolis = $(this).text();
+                            }
+                            if (a === 3) {
+                                codefournisseur = $(this).text();
+                                //designation = $(this).find('input').val();
+                                //console.log("desi == " + designation);
+                            }
+                            if (a === 4) {
+                                designation = $(this).text();
+                            }
+                            if (a === 5) {
+                                nlot = stock;
+                            }
+                            if (a === 6) {
+                                datep = stock;
+                            }
+                            if (a === 7) {
+                                qtecolis = stock;
+                            }
+                            if (a === 8) {
+                                //id = $(this).find('button').attr('id');
+                                //console.log(id);
+                            }
+                            if (a === 9) {
+                                numerote = stock;
+                            }
+                            if (a === 10) {
+                                confirme = stock;
+                            }
+                            if (a === 13) {
+                                retourncolis = stock;
+                            }
+                            if (a === 15) {
+                                colle = stock;
+                            }
+                        }
+                    });
+                    ligne[idx] = {"ncolis": ncolis.trim(), "codefournisseur": codefournisseur.trim(), "designation": designation.trim(),
+                        "nlot": nlot, "datep": datep, "qtecolis": qtecolis, "a": "a",
+                        "numerote": numerote, "confirme": confirme, "retourncolis": retourncolis,
+                        "colle": colle};
+                    idx++;
+                }
+            });
+            idx = 0;
+            var myidx = 0;
+            $.ajax({
+                type:"POST",    //type de requête utilisé par ajax
+                url:"/modify_ume/", //lien de la view qui gère la requête post
+                data: {
+                    'id': $('#umid').val(),
+                    'client': $('#client').val(),
+                    'fourtype': $('#fournisseur').val(),
+                    'lettre': $('#lveinput').val(),
+                    'zone': $('#zone').val(),
+                    'numerobl': $('#inputnbl').val(),
+                    'daterecep': $('#inputMDEx').val(),
+                    'quantitepale': $('#inputqpl').val(),
+                    'destinataireretour': $('#litiges').val(),
+                    'zoneatt': $('#zatt').val(),
+                    csrfmiddlewaretoken: '{{ csrf_token }}',
+                },
+                success: function(msg, data, settings){
+                    console.log("success: " + msg);
+                    if (Object.keys(ligne).length > 0) {
+                        for (key in ligne) {
+                            totalligne = 0;
+                            '{% for items in entreeligne %}'
+                            totalligne++;
+                            '{% endfor %}'
+                            envoilignes();
+                            myidx++;
+                        }
+                        myidx = 0;
+                    }
+                },
+                failure: function() {
+                    alert("fail");
+                }
+            });
+
+            function envoilignes() {
+                totalligne = 1;
+                '{% for items in entreeligne %}'
+                if ('{{ items.idLigneBonLivraisonEntree }}' >= totalligne) {
+                    totalligne = parseInt('{{ items.idLigneBonLivraisonEntree }}', 10);
+                }
+                '{% endfor %}'
+                $.ajax({
+                    type:"POST",
+                    url:"/ligneble/create/",
+                    data: {
+                        'id': $('#umid').val(),
+                        "lbid": ligne[myidx].id,
+                        "codefour": ligne[myidx].codefour,
+                        "desicli": ligne[myidx].desicli,
+                        "quantiteprod": ligne[myidx].quantiteprod,
+                        "quantitecolis": ligne[myidx].quantitecolis,
+                        "controle": ligne[myidx].controle,
+                        "termine": ligne[myidx].termine,
+                        "commattendu": ligne[myidx].commattendu,
+                        "commrecus": ligne[myidx].commrecus,
+                        "produitsrecu": ligne[myidx].produitsrecu,
+                        "colisrecu": ligne[myidx].colisrecu,
+                        "produitsalivrer": ligne[myidx].produitsalivrer,
+                        "colisalivrer": ligne[myidx].colisalivrer,
+                        "colislitigieux": ligne[myidx].colislitigieux,
+                        "produitslitgieux": ligne[myidx].produitslitgieux,
+                        "autrediffs": ligne[myidx].autrediffs,
+                        "diffproduit": ligne[myidx].diffproduit,
+                        "diffnonexp": ligne[myidx].diffnonexp,
+                        'totalligne': totalligne+1,
+                        csrfmiddlewaretoken: '{{ csrf_token }}',
+                    },
+                    success: function(msg, data, settings){
+                        console.log(msg);
+                    },
+                    failure: function() {
+                        alert("fail");
+                    }
+                });
+            }
+        });
+
     });
 </script>
 
